# ast_analyser

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: cli_arguments.rs  failure_finder.rs  lib.rs  main.rs
test_files/: test.dart
test_files/as/: as_2.dart
test_files/bang/: bang.dart  bang_copy.dart
test_files/comment/: comment.dart  comment_no_todo.dart
test_files/no_errors/: clean.dart  clean1.dart  is_not.dart  negation_operator.dart  not_equals.dart
tests/: analyse_file.rs  analyse_files.rs  bang.rs
